# schellingcoin-sub

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: lib.rs  schelling.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
schellingcoin/: Cargo.toml  README.md
schellingcoin/runtime/: Cargo.toml
schellingcoin/runtime/src/: schelling.rs
schellingcoin/runtime/wasm/: Cargo.toml  build.sh
schellingcoin/runtime/wasm/src/: lib.rs
schellingcoin/src/: chain_spec.rs  main.rs  service.rs
src/: chain_spec.rs  main.rs  service.rs
subschelling/: Cargo.toml
subschelling/runtime/: Cargo.toml
subschelling/src/: chain_spec.rs  service.rs
