[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'schellingcoin-runtime-wasm'
version = '1.0.0'
[dependencies.schellingcoin-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['schellingcoin-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
