[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'schelling-runtime-wasm'
version = '1.0.0'
[dependencies.schelling-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['schelling-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
